Updated submodules, docker-compose, and added rebuild script

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,15 @@
 version: '3'
 services:
     dykm_client:
-        build: ./DYKM_Client/Dockerfile
+        build:
+            context: ./DYKM_Client
         container_name: "DYKM_Client"
         ports:
-          - "3000:3000"
+            - "3000:3000"
     dykm_server:
-      build: ./DYKM_Server/Dockerfile
-      container_name: "DYKM_Server"
-      ports:
-        - "1337:1337"
+        build:
+            context: ./DYKM_Server
+        container_name: "DYKM_Server"
+        ports:
+            - "1337:1337"
 
